rename the term query to request and add finetune format

--- a/examples/english_address_to_chinese/main.ipynb
+++ b/examples/english_address_to_chinese/main.ipynb
@@ -19,7 +19,7 @@
     "from langchain.prompts import PromptTemplate\n",
     "from langchain_core.pydantic_v1 import BaseModel, Field\n",
     "\n",
-    "from llm_research.model import Prompt\n",
+    "from llm_research import Prompt\n",
     "\n",
     "\n",
     "system_template = \"\"\"\\\n",
@@ -52,20 +52,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024/01/26 12:11:38 INFO mlflow.tracking.fluent: Experiment with name '10-test' does not exist. Creating a new experiment.\n",
-      "100%|██████████| 10/10 [00:48<00:00,  4.83s/it]\n"
+      "100%|██████████| 10/10 [00:40<00:00,  4.03s/it]\n"
      ]
     }
    ],
    "source": [
-    "from llm_research.model import OpenAILLM\n",
+    "from llm_research import OpenAILLM\n",
     "model = OpenAILLM(model=\"gpt-3.5-turbo-1106\", temperature=0., timeout=120, verbose=True)\n",
     "model.init_request(experiment_name='10-test', run_name='chatgpt3.5')\n",
     "model.request_batch(\n",
